k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-commandes-database-deployment
  namespace: payetonkawa-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestion-commandes-database
  template:
    metadata:
      labels:
        app: gestion-commandes-database
    spec:
      containers:
      - name: gestion-commandes-database
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: schema-volume
          mountPath: /docker-entrypoint-initdb.d
        - name: postgres-storage
          mountPath: /var/lib/postgresql/data
        resources:
          limits:
            cpu: "1"
            memory: "512Mi"
          requests:
            cpu: "100m"
            memory: "256Mi"
      volumes:
      - name: schema-volume
        configMap:
          name: gestion-commandes-schema
      - name: postgres-storage
        emptyDir: {}
