k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gestion-commandes-database-service
  namespace: payetonkawa-prod
spec:
  selector:
    app: gestion-commandes-database
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  type: ClusterIP
