k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gestion-commandes-ingress
  namespace: payetonkawa-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - gestion-commandes-ptk.germainleignel.com
      secretName: gestion-commandes-ptk-tls
  rules:
    - host: gestion-commandes-ptk.germainleignel.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gestion-commandes-service
                port:
                  number: 80
